# Univer-2021-PiORE-Lab5

./: README.md  main.py  pyproject.toml  tests.py
frontend/: dialog_tree.ui  main.ui  main_window.py
trees/: DecisionNode.py  SimpleDecisonTree.py
